tests/fixtures/invalid/index_label_constructor_payload.gcl
// Error: constructor payloads take values, not named index labels.
index Maneuver = { A, B };

type Wrapper {
    Wrapper(value: Dimensionless),
}

node x: Wrapper = Wrapper(value: Maneuver.A);
